# queer-the-stacks

./: .dockerignore  .gitignore  .lighthouserc.json  .pa11y.json  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEFINITION_OF_DONE.md  Dockerfile  LICENSE  Makefile  NOTICE  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/rulesets/: README.md  main.proposed.json
.github/workflows/: ci.yml  codeql.yml  container-scan.yml  release.yml  scorecard.yml  standards.yml  zizmor.yml
app/: a11y_check.py  auth.py  browse.py  build_static.py  color_contrast.py  diversity.py  forecast.py  goals.py  logging_config.py  opds.py  render.py  security_headers.py  server.py  share.py  shelf.py  stats.py  view.py  wrapped.py
data/: lenses.toml
docs/: DOCUMENTATION-AUDIT.md  I18N.md  PROJECT-SCOPE.md  README.md  RESEARCH-ROADMAP.md  RESPONSIBLE-TECH-AUDITS.md  ROADMAP-FUTURE.md  ROADMAP.md  USER-RESEARCH.md  ethical-book-data-sources.md
docs/adr/: 0000-record-architecture-decisions.md  0001-static-render-audited-by-structural-checker.md  0002-calibre-koreader-join-key.md  0003-auth-fails-closed.md  0004-python-314-floor.md  0005-flat-non-src-layout.md  0006-i18n-and-ai-evaluation-not-applicable.md  0007-internationalization-applies-pending-fork-reconciliation.md
docs/audits/: accessibility-2026-06-05.md  coverage.xml  dashboard.html  eval-battery.json  eval-report.json  library-safety.md  perf_stats.csv  reading-privacy.md  residual-risk.md  scorecard-2026-07.md  source-ethics.md
docs/ideation/: 01-deep-dive.md  02-large-scale-fixes.md  03-expansions.md  04-impact-and-sequencing.md  README.md  exp-09-lending-opds-compliance-research.md
ingest/: archive.py  backup.py  calibre.py  cli.py  config.py  demo.py  kobo.py  koreader.py  kosync.py  models.py  refresh.py  serde.py  snapshot.py  store.py  unify.py
recommender/: __init__.py  battery.py  catalogs.py  collaborative.py  embeddings.py  eval.py  explain.py  hybrid.py  lists.py  lists_store.py  model.py  rerank.py  sources.py  synth.py
scripts/: perf-smoke.sh  secret-scan.sh
tests/: __init__.py  conftest.py  test_a11y.py  test_archive.py  test_auth.py  test_backup.py  test_calibre.py  test_catalog_parsers.py  test_catalogs_lists.py  test_config.py  test_diversity.py  test_eval.py  test_explain_absence.py  test_explanation.py  test_forecast.py  test_goals_time.py  test_hybrid.py  test_kobo.py  test_koreader.py  test_kosync.py  test_lists_cli.py  test_lists_store.py  test_live_clients_cassettes.py  test_log_safety.py  test_no_egress.py  test_observability.py  test_opds.py  test_perf.py  test_polish.py  test_recommender.py  test_refresh_doctor.py  test_reliability.py  test_render_view.py  test_reproducibility.py  test_schema_drift.py  test_security_headers.py  test_server_lifecycle.py  test_share.py  test_shelf_browse.py  test_snapshot_readonly.py  (+8 more)
tests/cassettes/: bookwyrm_list.json  kosync_progress.json  openlibrary_subject.json
tests/perf/: locustfile.py
tests/schemas/: MATRIX.md
tests/schemas/calibre/: calibre_2.x.sql  calibre_5.x.sql  calibre_7.x.sql
tests/schemas/koreader/: koreader_2021.sql  koreader_2023.sql  koreader_current.sql
